--- a/gb/22/12/25/n13891552.md
+++ b/gb/22/12/25/n13891552.md
@@ -41,31 +41,31 @@
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank">中共迫害良心律师</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/3/2/n10185855.md#1" target="_blank">“石油之父”惨遭灭门（下）</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/7/21/n11398576.md#1" target="_blank">国际人权组织东亚负责人：中共是邪恶的</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank">不一样的海外校园</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/11/14/n11656265.md#1" target="_blank">杨宁：东德国防部长之选择给中共军方的启示</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/4/30/n9090867.md#1" target="_blank">从制鞋工到超级业务员的修炼人生</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/8/n13945330.md#1">【未解之谜】罕见天象昭示红朝命数？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/6/n13944080.md#1">一代圣主康熙皇帝至孝之至 数十年如一日</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/8/n13945916.md#1">电视人患忧郁症陷绝境 因一本奇书改变命运</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/5/22/n13743021.md#1">大劫前冥府造册 是否真的在劫难逃</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/11/n13947696.md#1">【未解之谜】邮票上的预言</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/13/n13949307.md#1">【中国禁闻】中共新一届政府班子出炉 民众看衰</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/13/n13949309.md#1">【全球新闻】法国参议院通过养老金改革法案</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/11/n13948144.md#1">【新闻看点】李强如何被习看中 习李配能走多远</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/11/n13947628.md#1">李强任总理 3票反对8票弃权 曾因封城遭诟病</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/11/n13947818.md#1">赵立坚现身中越边境刷油漆 引热议</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/11/n13947637.md#1">分析：中南海新“习李配”对经济的影响</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/10/n13947566.md#1">关晓彤零遮掩买早餐 与店员逗趣对话笑翻网友</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/12/n13948769.md#1">梁朝伟亚洲电影大奖封帝 刘嘉玲打开名单惊呆</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/13/n13948868.md#1">范冰冰现身奥斯卡红毯 获赞“一出场就赢了”</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/10/n13947592.md#1">消失7个月 26岁男星蒋智豪确诊肺癌晚期</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/12/n13948798.md#1">“什么戏都想演” 洪金宝叹演动作片难糊口</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/8/n13945412.md#1">组图：最安全的十款SUV 碰撞测试评级最高</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/10/n13947035.md#1">抗癌有最佳时间</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/9/n13946765.md#1">一房二用 10种隐形床打造复合空间</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/12/n13948420.md#1">退休的最大挑战是什么？哈佛85年研究释疑</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/6/n13943987.md#1">药量过重？ 医师教你减轻服药的潜在危害</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/27/n13939508.md#1">一代圣主康熙的教子“心法”</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/28/n13960551.md#1">【未解之谜】海奥华预言（1）外星人眼中的创世</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/1/n13963438.md#1">【时事人物】从任性少年到ChatGPT新乌托邦教主</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/16/n13951411.md#1">明朝两则轮回转生的故事</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/24/n13957760.md#1">【古道人生】灾荒中新婚妻子卖身救夫最终得团圆</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/3/n13964335.md#1">【全球新闻】马英九称两岸都是中华民国 遭中共封杀</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/1/n13963293.md#1">【拍案惊奇】蔡奇要官员向习公布财产防外逃？</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/1/n13963385.md#1">【财商天下】银行危机暂解 美联储还会加息？</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/1/n13963229.md#1">大陆直播主街头采访“你会上前线吗”舆论翻车</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962292.md#1">海南变香港？专家：党比法大 难造自由港</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/1/n13962933.md#1">分析：养儿防老被中共破坏 老人何去何从</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962773.md#1">分享冻龄秘笈遭酸民攻击 伊能静高EQ回应</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962807.md#1">张国立现身大学开讲 自称是院长 网络炸锅</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962841.md#1">淡出歌坛四年 60岁王杰近况曝光</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/1/n13963429.md#1">9岁时曾遭绑架 张艾嘉儿子首次吐露心声</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962676.md#1">《镜之孤城》影评：奇幻经历 成走出霸凌阴霾契机</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962544.md#1">研究：每天锻炼20分钟有效降低住院风险</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962445.md#1">研究：具侵略性的恶犬比较可能有坏主人</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962591.md#1">常服安眠药痴呆风险增8成  专家荐“神奇助眠剂”</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962417.md#1">血糖失控会掉发 2方法有助逆转秃头</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962594.md#1">这几种食物加辣酱 味道超乎想像</a></li>
 <hr>
 
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/22/12/25/n13891552.htm">享受森林浴 慢游台中八仙山森林游乐区</a></p><hr>
